2015-05-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac: Bump library revision, due to code change.

2015-05-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-common.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt: Add words.

2015-04-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Catch error on break hints allocation.

	* src/thbrk/brk-maximal.c (brk_maximal_do):
	  - Do not continue if brkpos_hints allocation fails.

2015-04-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Do TIS-to-Unicode conversion only once on word breaking.

	* src/thbrk/brk-maximal.c (brk_maximal_do):
	  - Convert input string to Unicode before passing to
	    brk_maximal_do_impl().
	* src/thbrk/brk-maximal.c (brk_maximal_do_impl, brk_recover,
	  brk_recover_try):
	  - Redeclare to accept wide char string.
	  - Do not call th_tis2uni() on every input char.

	This appears to reduce word breaking time by 0.28% on test case.
	Thanks edgehogapp@gmail.com for the suggestion.
	https://groups.google.com/forum/#!topic/thai-linux-foss-devel/Be-OLMRYF7M

2015-04-29  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Bump doxygen required version.

	* configure.ac:
	  - Bump doxygen required version to 1.8.8, according to recent
	    Doxyfile update.

2015-03-07  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Also check for 'trietool' (without -0.2 suffix)

	* configure.ac:
	  - Check for both trietool-0.2 (for libdatrie < 0.2.9) and
	    trietool (for libdatrie >= 0.2.9) utility.

2015-03-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update Doxyfile.

	* doc/Doxyfile.in:
	  - Updated for doxygen 1.8.8 with 'doxygen -u'.

2015-03-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix compiler warning.

	* src/thbrk/brk-maximal.c (brk_recover):
	  - Initialize last_brk_pos on declaration.
